--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <title> Awax </title>
         <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet"> -->
         <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
     </head>
     <body>
